--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,12 +21,24 @@ steps:
 - script: asciidoctor-pdf --out-file WindowsHardening.pdf README.asciidoc && ls -lR
   displayName: 'Generate PDF file from README.asciidoc'
 
-- powershell: gci env:* | sort-object name | Format-Table -AutoSize | Out-File $env:BUILD_ARTIFACTSTAGINGDIRECTORY/environment-variables.txt
+# - powershell: gci env:* | sort-object name | Format-Table -AutoSize | Out-File $env:BUILD_ARTIFACTSTAGINGDIRECTORY/environment-variables.txt
 
+# - task: PublishBuildArtifacts@1
+#   inputs:
+#     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+#     artifactName: drop
+
+# Publish Build Artifacts
+# Publish build artifacts to Azure Pipelines/TFS or a file share
 - task: PublishBuildArtifacts@1
   inputs:
-    pathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    artifactName: drop
+    pathToPublish: WindowsHardening.pdf
+    #pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+    #artifactName: 'drop' 
+    #publishLocation: 'Container' # Options: container, filePath
+    #targetPath: # Required when publishLocation == FilePath
+    #parallel: false # Optional
+    #parallelCount: # Optional
 
 # - script: echo Hello, world!
 #   displayName: 'Run a one-line script'
