--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,12 +33,15 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     pathToPublish: WindowsHardening.pdf
+    artifactName: WindowsHardening.pdf
     #pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
     #artifactName: 'drop' 
     #publishLocation: 'Container' # Options: container, filePath
     #targetPath: # Required when publishLocation == FilePath
     #parallel: false # Optional
     #parallelCount: # Optional
+
+
 
 # - script: echo Hello, world!
 #   displayName: 'Run a one-line script'
