--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,8 @@ steps:
 - script: asciidoctor-pdf --out-file WindowsHardening.pdf README.asciidoc && ls -lR
   displayName: 'Generate PDF file from README.asciidoc'
 
+# Useful info, that.
+
 # - powershell: gci env:* | sort-object name | Format-Table -AutoSize | Out-File $env:BUILD_ARTIFACTSTAGINGDIRECTORY/environment-variables.txt
 
 # - task: PublishBuildArtifacts@1
@@ -28,20 +30,30 @@ steps:
 #     pathtoPublish: '$(Build.ArtifactStagingDirectory)'
 #     artifactName: drop
 
+# This doesn't work, it ALWAYS generates a ZIP file as 'artifactName.zip'
+# Doesn't appear to let you just release a single file.
+
 # Publish Build Artifacts
 # Publish build artifacts to Azure Pipelines/TFS or a file share
-- task: PublishBuildArtifacts@1
+# - task: PublishBuildArtifacts@1
+#   inputs:
+#     pathToPublish: WindowsHardening.pdf
+#     artifactName: WindowsHardening.pdf
+#     #pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+#     #artifactName: 'drop' 
+#     #publishLocation: 'Container' # Options: container, filePath
+#     #targetPath: # Required when publishLocation == FilePath
+#     #parallel: false # Optional
+#     #parallelCount: # Optional
+
+# Try using Publish Pipeline Artifact task
+
+# Publish Pipeline Artifact
+# Publish a local directory or file as a named artifact for the current pipeline.
+- task: PublishPipelineArtifact@0
   inputs:
-    pathToPublish: WindowsHardening.pdf
-    artifactName: WindowsHardening.pdf
-    #pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
     #artifactName: 'drop' 
-    #publishLocation: 'Container' # Options: container, filePath
-    #targetPath: # Required when publishLocation == FilePath
-    #parallel: false # Optional
-    #parallelCount: # Optional
-
-
+    targetPath: WindowsHardening.pdf
 
 # - script: echo Hello, world!
 #   displayName: 'Run a one-line script'
