--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,9 +20,9 @@ steps:
   displayName: 'gem install asciidoctor-pdf'
 
 - script: asciidoctor-pdf --out-file WindowsHardening-${BUILD_BUILDNUMBER}.pdf README.asciidoc && ls -lR && printenv
-  displayName: 'Generate PDF file from README.asciidoc'
+  displayName: 'Generate PDF file'
 
-- task: PublishPipelineArtifacts@0
+- task: PublishPipelineArtifact@0
   inputs:
     pathToPublish: 'WindowsHardening-$(Build.BuildNumber).pdf'
     artifactName: 'WindowsHardening-$(Build.BuildNumber).zip'
