Publish Build Artifacts in topic branch

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,10 +22,15 @@ steps:
 - script: asciidoctor-pdf --out-file WindowsHardening-${BUILD_BUILDNUMBER}.pdf README.asciidoc && ls -lR && printenv
   displayName: 'Generate PDF file'
 
-- task: PublishPipelineArtifact@0
+- task: PublishBuildArtifacts@1
   inputs:
-    pathToPublish: 'WindowsHardening-$(Build.BuildNumber).pdf'
-    artifactName: 'WindowsHardening-$(Build.BuildNumber).zip'
+    pathToPublish: 'WindowsHardening-${Build.BuildNumber}.pdf'
+    artifactName: 'WindowsHardening-${Build.BuildNumber}'
+
+# - task: PublishPipelineArtifact@0
+#   inputs:
+#     pathToPublish: 'WindowsHardening-$(Build.BuildNumber).pdf'
+#     artifactName: 'WindowsHardening-$(Build.BuildNumber)'
 
 # Useful info, that.
 
