--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,8 +32,7 @@ steps:
 
 - task: PublishPipelineArtifact@0
   inputs:
-    pathToPublish: 'WindowsHardening-$(Build.BuildNumber).pdf'
-    # artifactName: 'WindowsHardening-$(Build.BuildNumber)'
+    artifactName: 'WindowsHardening-$(Build.BuildNumber)'
 
 # Useful info, that.
 
