--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,33 @@ steps:
   inputs:
     artifactName: 'WindowsHardening-$(Build.BuildNumber)'
 
+# GitHub Release
+# Create, edit, or delete a GitHub release.
+- task: GitHubRelease@0
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+  inputs:
+    gitHubConnection: WindowsHardeningGitHub
+    repositoryName: WindowsHardening
+    action: 'create'
+    target: '$(Build.SourceVersion)'
+    tagSource: 'auto'
+    title: 'Windows Hardening PDF Release ($(Build.BuildNumber))'
+    assets: 'WindowsHardening-$(Build.BuildNumber).pdf'
+#     assets: WindowsHardening.pdf
+#     #action: 'create' # Options: create, edit, delete
+#     #target: '$(Build.SourceVersion)' # Required when action == Create || Action == Edit
+#     #tagSource: 'auto' # Required when action == Create# Options: auto, manual
+#     #tag: # Required when action == Edit || Action == Delete || TagSource == Manual
+#     #title: # Optional
+#     #releaseNotesSource: 'file' # Optional. Options: file, input
+#     #releaseNotesFile: # Optional
+#     #releaseNotes: # Optional
+#     #assets: '$(Build.ArtifactStagingDirectory)/*' # Optional
+#     #assetUploadMode: 'delete' # Optional. Options: delete, replace
+#     #isDraft: false # Optional
+#     #isPreRelease: false # Optional
+#     #addChangeLog: true # Optional
+
 # Useful info, that.
 
 # - powershell: gci env:* | sort-object name | Format-Table -AutoSize | Out-File $env:BUILD_ARTIFACTSTAGINGDIRECTORY/environment-variables.txt
@@ -68,28 +95,6 @@ steps:
 #   inputs:
 #     #artifactName: 'drop'
 #     targetPath: WindowsHardening.pdf
-
-# GitHub Release
-# Create, edit, or delete a GitHub release.
-# - task: GitHubRelease@0
-#   inputs:
-#     gitHubConnection: WindowsHardeningGitHub
-#     repositoryName: WindowsHardening
-#     action: 'create'
-#     assets: WindowsHardening.pdf
-#     #action: 'create' # Options: create, edit, delete
-#     #target: '$(Build.SourceVersion)' # Required when action == Create || Action == Edit
-#     #tagSource: 'auto' # Required when action == Create# Options: auto, manual
-#     #tag: # Required when action == Edit || Action == Delete || TagSource == Manual
-#     #title: # Optional
-#     #releaseNotesSource: 'file' # Optional. Options: file, input
-#     #releaseNotesFile: # Optional
-#     #releaseNotes: # Optional
-#     #assets: '$(Build.ArtifactStagingDirectory)/*' # Optional
-#     #assetUploadMode: 'delete' # Optional. Options: delete, replace
-#     #isDraft: false # Optional
-#     #isPreRelease: false # Optional
-#     #addChangeLog: true # Optional
 
 # - script: echo Hello, world!
 #   displayName: 'Run a one-line script'
