Something not quite right with GitHubRelease task, check location of artifacts

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,17 +34,21 @@ steps:
   inputs:
     artifactName: 'WindowsHardening-$(Build.BuildNumber)'
 
+- script: pwd && ls -lR
+  displayName: 'Print build environment (again)'
+
 # GitHub Release
 # Create, edit, or delete a GitHub release.
-- task: GitHubRelease@0
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-  inputs:
-    gitHubConnection: WindowsHardeningGitHub
-    repositoryName: nuket/WindowsHardening
-    tagSource: 'manual'
-    tag: '$(Build.BuildNumber)'
-    title: 'Windows Hardening PDF Release ($(Build.BuildNumber))'
-    assets: 'WindowsHardening-$(Build.BuildNumber).pdf'
+# - task: GitHubRelease@0
+#   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+#   inputs:
+#     gitHubConnection: WindowsHardeningGitHub
+#     repositoryName: nuket/WindowsHardening
+#     tagSource: 'manual'
+#     tag: '$(Build.BuildNumber)'
+#     title: 'Windows Hardening PDF Release ($(Build.BuildNumber))'
+#     assets: 'WindowsHardening-$(Build.BuildNumber).pdf'
+
 #     assets: WindowsHardening.pdf
 #     #action: 'create' # Options: create, edit, delete
 #     #target: '$(Build.SourceVersion)' # Required when action == Create || Action == Edit
