--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,8 +37,8 @@ steps:
 - script: pwd && ls -lR
   displayName: 'Print build environment (again)'
 
-GitHub Release
-Create, edit, or delete a GitHub release.
+# GitHub Release
+# Create, edit, or delete a GitHub release.
 - task: GitHubRelease@0
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   inputs:
